REGRESSION (r138196): Regions with text-overflow: ellipsis; are being ellipsized unnecessarily https://bugs.webkit.org/show_bug.cgi?id=105600

Source/WebCore:

Reviewed by Darin Adler.

Pixel-snap lineBoxEdge before comparing with the block edge as
the lineBox edge isn't guaranteed to be snapped to device pixels
on all platforms.

Test: fast/sub-pixel/ellipsis-table.html

* rendering/RenderBlockLineLayout.cpp:
(WebCore::RenderBlock::checkLinesForTextOverflow):

LayoutTests:

Reviewed by Darin Adler.

Add test for text-overflow: ellipsis inside a table.

* fast/sub-pixel/ellipsis-table-expected.html: Added.
* fast/sub-pixel/ellipsis-table.html: Added.


Canonical link: https://commits.webkit.org/124027@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@138543 268f45cc-cd09-0410-ab3c-d52691b4dbfc